--- a/style.css
+++ b/style.css
@@ -68,14 +68,16 @@ h2{
 }
 
 .grupo-producto > .producto{
-    width: 33%;
+    width: 30%;
     display: inline-block;
     padding: 3em;
 }
 
 .grupo-producto{
-    padding: 1em;
-    color: white;
+    background-color: lightgray;
+    margin: 3em;
+    color: black;
+    border-radius: var(--borde-radio) var(--borde-radio);
 }
 
 .producto{
@@ -89,9 +91,8 @@ h2{
 }
 
 .titulo-producto{
-    padding: var(--padding-y) var(--padding-x);
     font-size: 1.25em;
-    color: red;
+    color: black;
 }
 
 .descripcion-prodcuto{
