--- a/style.css
+++ b/style.css
@@ -152,3 +152,118 @@ h4,h5{
 .img-redes{
     width: 100%;
 }
+
+.publicaciones > .publicacion{
+    width: 49%;
+    display: inline-block;
+    padding: 3em;
+}
+
+.publicaciones{
+    background-color: white;
+    color: black;
+}
+
+.publicacion{
+    border-radius: var(--borde-radio);
+    margin-bottom: 0.5em;
+}
+
+.titulo-publicacion{
+    font-size: 1.25em;
+    color: black;
+}
+
+.descripcion-publicacion{
+    text-align: justify;
+    padding: 0 var(--padding-x);
+}
+
+.cuerpo{
+    background-color: white;
+    color: black;
+}
+
+li{
+    list-style: none;
+}
+
+.lista{
+    margin-top: 3%;
+    display: flex;
+    height: 30%;
+}
+
+.producto-carrito{
+    align-items: center;
+    margin-left: 2%;
+    margin-top: 3%;
+}
+
+.precio-por-varios{
+    margin-top: 7%;
+    margin-left: 45%;
+    font-weight: bold;
+}
+
+.informacion-final , .total{ 
+    font-weight: bold;
+    margin-left: 4%;
+}
+
+.boton-compra{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 2em;
+}
+
+/* Creditos a  https://getcssscan.com/css-buttons-examples*/
+
+.botones-compra {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.botones-compra:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.botones-compra:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.botones-compra:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+/* Creditos a  https://getcssscan.com/css-buttons-examples*/
